# dbt-with-airflow

./: .gitignore  README.md  justfile  pyproject.toml
MinIO/: docker-compose.yml
airflow/: Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/btc/: dag.py
airflow/dags/datahub_ingsetion/: from_dbt_market_price.py
airflow/dags/exchange_rate/: dag.py  dag_sparkjob.py
airflow/dags/gold/: dag.py  dag2.py  dag3.py  dag4.py  dag5.py  get_gold_price_v2.py
airflow/dags/schedule_practice/: custom_timetable_with_catchup2.py  cutom_timetable_with_catchup.py  dag.py
airflow/dags/summary_and_export/: dag.py  export_market_price.py  run_dbt_marketprice.py
airflow/plugins/: custom_timetable.py
datahub/: docker-compose.yml
db/postgres/: docker-compose.yml
dbt/: Dockerfile
dbt/docker_image/: Dockerfile  requirements.txt
dbt/projects/process_market_price/: .user.yml  dbt_project.yml  profiles.yml  recipe.yml
dbt/projects/process_market_price/models/marts/: _marts_process_market_price.yml  btc_1day_change.sql  btc_and_gold_price.sql  btc_last_24hr.sql  btc_price_day_and_hr_change.sql  btc_price_hr.sql  gold_price_1day_change.sql  gold_price_1hr_change.sql  gold_price_day_and_hr_change.sql  (+1 more)
dbt/projects/process_market_price/tests/: assert_1hr_change_timestamp_diff.sql  assert_btc_hr_change_time_diff.sql  assert_btc_open_time.sql  assert_gold_close_time.sql  assert_gold_hr_change_time_diff.sql  assert_market_close_time.sql  assert_poritive_value_for_gold_price.sql
docker_socket_proxy/: docker-compose.yml
ingestion/: Dockerfile  requirements.txt
(+5 files in other folders)
